fulcrum-estimator/force-app/main/default/objects/Repair_Estimate_Line_Item__c/Repair_Estimate_Line_Item__c.object-meta.xml
<CustomObject>
    <description>An line item for an estimated cost of repairs.</description>
    <label>Repair Estimate Line Item</label>
    <nameField>
        <label>Repair Estimate Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Estimate Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>