fulcrum-estimator/force-app/main/default/objects/Repair_Estimate_Line_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes relating to the repair estimation.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>