fulcrum-estimator/force-app/main/default/objects/Repair_Estimate_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Estimated price of this line item.</description>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>