fulcrum-estimator/force-app/main/default/objects/Repair_Estimate_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of estimate line item.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materials</fullName>
                <default>true</default>
                <label>Materials</label>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>All-Inclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>